--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -95,6 +95,10 @@ section{
     padding: 5px;
     justify-content: center;
     height: 100%;
+    text-align: center;
+    height: 90%;
+    margin: 1%;
+    height: fit-content;
 }
 nav ul{
     list-style: none;
@@ -255,7 +259,7 @@ header h1
     align-items: center;
 }
 .call-to-action h2{
-    margin: 10px;
+    /* margin: 10px; */
     position: absolute;
     top: 25%;
     left: 50%;
@@ -271,11 +275,11 @@ header h1
 .navigation li{
     width: 100%;
 }
-#join{
+#join {
     position: absolute;
-    top: 60%;
+    top: 80%;
     left: 50%;
-    transform: translate(-50%, -50%);  
+    transform: translate(-50%, -50%);
     background-color: #235789;
     border-radius: 10px;
     width: 100px;
@@ -303,6 +307,7 @@ header h1
 #discover-main{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 2fr));
+   
 }
 
 #discover-main{
@@ -348,7 +353,7 @@ form label{
     font-size: 16px;
 }
 
-section{
+form section{
     height: 30%;
     margin: 1%;
 }
@@ -407,10 +412,18 @@ button{
 /* Directory */
 
 .cards{
-    display: grid;
+    /* display: grid; */
     grid-template-columns: repeat(auto-fit, minmax(100px, 3fr));
     align-items: center;
     width: 100%;
+}
+
+.main-directory{
+    text-align: center;
+    
+}
+.main-directory button{
+    margin: 0 auto;
 }
 
 /* .grid img {
@@ -426,7 +439,7 @@ button{
     max-width: 100%;
     align-items: center;
     margin: 0 auto;
-    max-height: 100%;
+    height: 100vh;
 }
 
 .directory header, footer{
@@ -440,7 +453,7 @@ button{
 
 .directory section img {
     width: auto;
-    max-width: 300px;
+    max-width: 240px;
     box-shadow: 0 0 30px #000;
     height: 250px;
     margin: auto;
@@ -469,3 +482,36 @@ button{
     margin: 0%;
 }
 
+
+/* Three-day forecast */
+
+#three-day-forecast{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#today-temp{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+#weather h3{
+    width: 100%;
+    text-align: center;
+}
+
+#business{
+    display: flex;
+}
+
+#business div{
+    margin: 5px;
+}
+
+.business-cards{
+    display: flex;
+    flex-direction: column;
+}
