--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -239,6 +239,32 @@ label{
     text-align: center;
     justify-content: center;
 }
+.sections{
+    display: grid;
+    margin: 0;
+}
+
+#our-town{
+    grid-column: 1/3;
+}
+
+#business{
+    grid-column: 2/3;
+}
+
+.business-cards{
+    display: flex;
+    flex-direction: row;
+}
+
+#weather{
+    grid-column: 1/2;
+}
+
+#business h3{
+    width: 100%;
+
+}
 }
 
 /* .row1{
