--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -243,6 +243,7 @@ label{
 .sections{
     display: grid;
     margin: 0;
+    font-size: 20px;
 }
 
 #our-town{
@@ -281,8 +282,12 @@ label{
     border-radius: 50%;
     margin: 0 auto;
 }
-#our-town h3{
+#our-town h1{
     width: 100%;
+}
+#our-town li{
+    font-size: 20px;
+    list-style: none;
 }
 }
 
